# AI-Evaluation-Platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  agent.py  audit.py  benchmarks.py  comparisons.py  datasets.py  deps.py  evaluations.py  gates.py  health.py  metrics.py  observability.py  prompts.py  providers.py  rag.py  runs.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  logging.py  rate_limit.py  rbac.py  scheduler.py  security_headers.py  telemetry.py
backend/app/models/: __init__.py  agent_eval.py  agent_eval_result.py  agent_run.py  agent_step.py  api_key.py  approval.py  audit_event.py  base.py  benchmark.py  comparison.py  dataset.py  dataset_policy.py  eval_job.py  eval_schedule.py  evaluation.py  evaluation_result.py  experiment.py  gate_decision.py  metric.py  mixins.py  prompt.py  provider.py  rag_corpus.py  rag_document.py  rag_eval.py  rag_eval_result.py  release_gate.py  run.py
backend/app/schemas/: __init__.py  agent.py  audit.py  auth.py  benchmark.py  common.py  comparison.py  dataset.py  dataset_policy.py  evaluation.py  gate_decision.py  metric.py  observability.py  prompt.py  provider.py  rag.py  release_gate.py  run.py
backend/app/services/: __init__.py  agent_eval_service.py  agent_run_service.py  approval_service.py  audit.py  auth_service.py  benchmark_service.py  comparison_service.py  dataset_policy_service.py  dataset_service.py  evaluation_service.py  experiment_service.py  gate_service.py  metric_service.py  prompt_service.py  provider_service.py  rag_corpus_service.py  rag_document_service.py  rag_eval_service.py  rag_retrieval_service.py  run_service.py  schedule_service.py  trend_service.py  versioning.py
backend/migrations/: env.py
backend/migrations/versions/: a40763e31c9b_phase1_core_entities_and_audit.py  a8a557afd538_phase3_evaluation_engine.py  b3556b7705c3_phase2_inference_runs.py  c5d6e7f8a9b0_phase5_comparisons.py  d6e7f8a9b0c1_phase6_gates.py  e7f8a9b0c1d2_phase7_benchmarks.py  f0a1b2c3d4e5_phase8_rag.py  g1b2c3d4e5f6_phase9_agent.py  h2c3d4e5f6g7_phase10_observability.py  (+1 more)
backend/tests/: conftest.py  test_agent.py  test_audit.py  test_benchmarks.py  test_comparisons.py  test_evaluations_api.py  test_gates.py  test_health.py  test_observability.py  test_rag.py  test_runs_api.py  test_security.py  test_versioning_api.py
docs/: api.md  (+3 more)
(+83 files in other folders)
