[project]
name = "aep-backend"
version = "0.0.0"
description = "AI Evaluation Platform — backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "structlog>=25.5",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "mypy>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# FastAPI's Depends()/Query() defaults are function calls by design.
flake8-bugbear.extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
